# astro_research-white-paper

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  API_DEPLOYMENT.md  COMPREHENSIVE_TEST_REPORT.md  FINAL_DELIVERY.tex  FINAL_STATUS_REPORT.md  GITHUB_PAGES_DEPLOYMENT.md  Makefile  PHASE_3_COMPLETION.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md  TESTING_DELIVERY_SUMMARY.md  USGS_EARTHQUAKE_DATA_GUIDE.md  _quarto.yml  api-client.js  api.py  app.py  build-all.sh  build.sh  coverage.xml  generate-assets.py  index.qmd  interactive-components.html  manuscript.tex  pyproject.toml  regression_coefficients.csv  regression_matrix.csv  reports.qmd  requirements-app.txt  requirements.txt  research_results.json  setup.py.bak  test-output.html  test.qmd  validation_report.json  web.py
.github/workflows/: api-webhook.yml  auto-release.yml  build-deploy.yml  ci.yml  data-analysis.yml  deploy-platform.yml  docs.yml  jekyll-gh-pages.yml  pages.yml  publish-research.yml  research-pdf.yml  scientific-reporting.yml
.quarto/project-cache/: deno-kv-file
.quarto/xref/: INDEX
_book/: index.embed.ipynb  index.out.ipynb  simple_manuscript.embed.ipynb  simple_manuscript.out.ipynb
_site/: FINAL_DELIVERY.docx  FINAL_DELIVERY.epub  FINAL_DELIVERY.xml  PHASE_3_COMPLETION.docx  PHASE_3_COMPLETION.epub  PHASE_3_COMPLETION.xml  index.html  reports.docx  reports.epub  reports.xml  search.json
_site/tests/: TESTING_GUIDE.docx  TESTING_GUIDE.epub  TESTING_GUIDE.xml  test.docx  test.epub  test.xml
assets/releases/: vedic-numerology-research-manuscript-20260122_104941.docx  vedic-numerology-research-manuscript-20260122_104941.html
assets/visualizations/: planetary_strength_dashboard.html
config/: _quarto.yml  default_config.yaml
config/requirements/: requirements-app.txt  requirements-colab.txt  requirements.txt
docs/: Astrology-Numerology Research Pipeline.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  INDEX.md  Numerology-Astrology Timeline Visualization.md  README.md  apa.csl  custom.css  index.rst  references.bib
docs/framework/: EARTHQUAKE_DATA_INTEGRATION.md  MULTI_USE_CASE_FRAMEWORK.md  PROJECT_UPDATE_SUMMARY.md  QUICK_REFERENCE_CARD.md
docs/guides/: API_DEPLOYMENT.md  QUICK_START_RESEARCH.md  REAL_TIME_VISUALIZATION_GUIDE.md  REORGANIZATION_VISUAL_GUIDE.md  RESEARCH_REPORT_GUIDE.md  Scientific Report Structure Improvement.md
docs/project_management/: FINAL_DELIVERY.md
docs/project_tracking/: ARCHITECTURE.md  START_HERE.md
docs/reports/: DEPLOYMENT_COMPLETE.md  FINAL_REORGANIZATION_REPORT.md  FINAL_STATUS_REPORT.md  PROJECT_COMPLETE.md  TASKS_COMPLETED.md  TESTING_VALIDATION_REPORT.md  VERIFICATION_COMPLETE.md
docs/research/: COMPREHENSIVE_RESEARCH_THESIS.qmd  COMPREHENSIVE_RESEARCH_THESIS.tex  PLANETARY_STRENGTH_VISUALIZATION.md  RESEARCH_COMPLETION_SUMMARY.md  (+8 more)
notebooks/: 01_numerology_calculations.ipynb  02_earthquake_visualization.ipynb
reports/: README.md  manuscript.ipynb  manuscript.qmd  manuscript.tex  references.bib
scripts/: README.md  build_all_reports.sh  generate_pdfs.sh  generate_track1_scientific_assets.py  generate_track2_scientific_assets.py  generate_vedic_principles_catalog.py  generate_vedic_principles_coverage.py
src/: README.md  __init__.py  generate_artifacts.py
styles/: landing.css  pdf-before-body.tex  pdf-header.tex  reference.docx
templates/: timeline.html
tests/: TESTING_GUIDE.md  TESTING_GUIDE.tex  __init__.py  run_all_tests.py  test.tex  test_astrology.py  test_dignity.py  test_e2e_complete.py  test_e2e_playwright.py  test_integration.py  test_multiplatform_validation.py  test_numerology.py  test_reference_charts.py  test_report.json  test_research_pipeline_phase1.py  test_research_pipeline_phase2.py  test_research_pipeline_phase3.py  test_scientific_report_smoke.py  test_unit_comprehensive.py  test_validation_script.py  test_vedic_principles_catalog.py  test_vimshottari_dasha.py  test_vimshottari_dasha_nested.py  validate_infrastructure.py  validation_report.json
use_cases/: README.md
(+215 files in other folders)
